log
ju.,  5 de may. de 2022 11:19:31: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
f64e4b3
ju.,  5 de may. de 2022 11:20:52: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
1d81c59
ju.,  5 de may. de 2022 11:32:55: 
 heap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  0|0
858a63f
ju.,  5 de may. de 2022 11:34:57: 
 heap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|3
total_score: 10/70
fc4c6ce
ju.,  5 de may. de 2022 11:37:18: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
d7f6dc0
ju.,  5 de may. de 2022 11:43:57: 
 heap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_pop':
heap.c:50:27: error: 'return' with a value, in function returning void [-Werror]
    if(pq->size==0) return NULL;
                           ^~~~
heap.c:49:6: note: declared here
 void heap_pop(Heap* pq){
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
cf7f513
ju.,  5 de may. de 2022 11:44:26: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_pop':
heap.c:50:20: error: statement with no effect [-Werror=unused-value]
    if(pq->size==0) exit;
                    ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9aac7bf
ju.,  5 de may. de 2022 11:45:08: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|2
total_score: 20/70
7d95d60
ju.,  5 de may. de 2022 11:46:27: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
heap.c: In function 'heap_pop':
heap.c:51:9: error: passing argument 1 of 'free' makes pointer from integer without a cast [-Werror=int-conversion]
    free(pq->heapArray[0].priority);
         ^~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:487:39: note: expected 'void *' but argument is of type 'int'
 _CRTIMP __cdecl __MINGW_NOTHROW  void free (void *);
                                       ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
433ec9d
ju.,  5 de may. de 2022 11:47:29: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_pop':
heap.c:51:9: error: passing argument 1 of 'free' makes pointer from integer without a cast [-Werror=int-conversion]
    free(pq->heapArray[0].priority);
         ^~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:487:39: note: expected 'void *' but argument is of type 'int'
 _CRTIMP __cdecl __MINGW_NOTHROW  void free (void *);
                                       ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8239e57
ju.,  5 de may. de 2022 11:47:57: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'heap_pop':
heap.c:50:4: error: unterminated comment
    /*free(pq->heapArray[0].data);
    ^
test.c:276:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
 }
 ^
test.c:12:6: error: unused variable 'msg' [-Werror=unused-variable]
 char msg[300];
      ^~~
At top level:
test.c:276:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:6:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9e27994
ju.,  5 de may. de 2022 11:48:13: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
82d0f15
ju.,  5 de may. de 2022 11:48:33: 
 heap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  3|2
total_score: 25/70
f76e2d1
ju.,  5 de may. de 2022 11:49:38: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
f7103ba
ju.,  5 de may. de 2022 11:53:28: 
 heap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  3|2
total_score: 25/70
6bb4311
ju.,  5 de may. de 2022 11:54:15: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
1aade42
